[project]
name = "pokemon-combat-simulator"
version = "1.0.0"
description = "Pokemon Combat Simulator — Interactive Streamlit dashboard with live PokeAPI data, battle simulation, and data visualizations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Dashboard framework (Criterion 3: Dashboard Quality)
    "streamlit>=1.54.0",

    # HTTP requests to PokeAPI (Criterion 1: API Usage)
    # Endpoints: /pokemon/{name}, /move/{name}, /type/{name}
    "requests>=2.32.0",

    # DataFrame manipulation and .melt() for charts (Criterion 2: Pandas Usage)
    "pandas>=2.3.3",

    # Interactive charts: grouped bar chart, HP over time line chart (Criterion 3)
    "plotly>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
]

[project.urls]
Repository = "https://github.com/<your-org>/pokemon-combat-simulator"
"Streamlit App" = "https://<your-app>.streamlit.app"


[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
]
